// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run for all time w/ some meta submissions 1`] = `
Object {
  "c": Object {
    "mike": 3,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 3,
  "u": Array [
    "anonymous-user-id",
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run for all time w/ some meta submissions 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.01,
    0.02,
    0.04,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "ct_subs": Array [
    Object {
      "e": "foo@example.com",
      "n": "Blah",
      "s": "just a guess",
      "t": null,
      "u": "blah",
    },
    Object {
      "e": null,
      "n": "Mike D",
      "s": "my submission",
      "t": null,
      "u": "other-user-id",
    },
  ],
  "n": 3,
  "nt": 158,
  "s": 2,
  "st": 88,
  "uc": Array [
    1,
    0.4,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
  ],
}
`;

exports[`run for all time w/ some meta submissions 3`] = `
Array [
  Object {
    "n": "Blah",
    "s": "just a guess",
    "t": null,
    "u": "blah",
  },
  Object {
    "n": "Mike D",
    "s": "my submission",
    "t": null,
    "u": "other-user-id",
  },
]
`;

exports[`run for all time w/ some meta submissions 4`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.02,
    0.04,
    0.08,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
  ],
  "ct_subs": Array [
    Object {
      "e": "foo@example.com",
      "n": "Blah",
      "s": "just a guess 2",
      "t": null,
      "u": "blah",
    },
    Object {
      "e": null,
      "n": "Mike D",
      "s": "my submission 2",
      "t": null,
      "u": "other-user-id",
    },
  ],
  "n": 6,
  "nt": 316,
  "s": 4,
  "st": 176,
  "uc": Array [
    2,
    0.8,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
  ],
}
`;

exports[`run for all time w/ some meta submissions 5`] = `
Array [
  Object {
    "n": "Blah",
    "s": "just a guess 2",
    "t": null,
    "u": "blah",
  },
  Object {
    "n": "Mike D",
    "s": "my submission 2",
    "t": null,
    "u": "other-user-id",
  },
]
`;

exports[`run for all time w/ some meta submissions 6`] = `
Object {
  "mike": Object {
    "ct_sub_c": 0,
    "ct_sub_n": 2,
    "n": 6,
    "s": 4,
    "st": 176,
  },
}
`;

exports[`run for all time w/ some meta submissions 7`] = `"fSEwJorvqOMK5UhNMHa4mu48izl1"`;

exports[`run for all time w/ some meta submissions 8`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.03,
    0.06,
    0.12,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
    3,
  ],
  "ct_subs": Array [
    Object {
      "e": "foo@example.com",
      "n": "Blah",
      "s": "just a guess",
      "t": null,
      "u": "blah",
    },
    Object {
      "e": "foobar@example.com",
      "n": "FOOBAR",
      "s": "just a guess",
      "t": null,
      "u": "foo-bar",
    },
    Object {
      "e": null,
      "n": "Revealing",
      "rv": true,
      "s": "",
      "t": null,
      "u": "i-revealed",
    },
    Object {
      "e": null,
      "n": "Mike D",
      "s": "my submission 2",
      "t": null,
      "u": "other-user-id",
    },
  ],
  "n": 11,
  "nt": 562,
  "s": 8,
  "st": 352,
  "uc": Array [
    3,
    1.2000000000000002,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
    0.6000000000000001,
  ],
}
`;

exports[`run for all time w/ some meta submissions 9`] = `
Array [
  Object {
    "n": "Blah",
    "s": "just a guess",
    "t": null,
    "u": "blah",
  },
  Object {
    "n": "FOOBAR",
    "s": "just a guess",
    "t": null,
    "u": "foo-bar",
  },
  Object {
    "n": "Mike D",
    "s": "my submission 2",
    "t": null,
    "u": "other-user-id",
  },
]
`;

exports[`run for all time w/ some meta submissions 10`] = `
Object {
  "mike": Object {
    "ct_sub_c": 2,
    "ct_sub_n": 4,
    "n": 11,
    "s": 8,
    "st": 352,
  },
}
`;

exports[`run for all time w/ some meta submissions 11`] = `"fSEwJorvqOMK5UhNMHa4mu48izl1"`;

exports[`run for all time w/o initial state 1`] = `
Object {
  "c": Object {
    "mike": 3,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 3,
  "u": Array [
    "anonymous-user-id",
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run for all time w/o initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.01,
    0.02,
    0.04,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "n": 3,
  "nt": 158,
  "s": 2,
  "st": 88,
  "uc": Array [
    1,
    0.4,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
  ],
}
`;

exports[`run for all time w/o initial state 3`] = `
Object {
  "mike": Object {
    "n": 3,
    "s": 2,
    "st": 88,
  },
}
`;

exports[`run for all time w/o initial state 4`] = `"fSEwJorvqOMK5UhNMHa4mu48izl1"`;

exports[`run for more recent w/o initial state 1`] = `
Object {
  "c": Object {
    "mike": 2,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 2,
  "u": Array [
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run for more recent w/o initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.01,
    0.02,
    0.04,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "n": 2,
  "nt": 114,
  "s": 1,
  "st": 44,
  "uc": Array [
    1,
    0.4,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
  ],
}
`;

exports[`run w/ initial state 1`] = `
Object {
  "c": Object {
    "mike": 6,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 6,
  "u": Array [
    "anonymous-user-id",
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run w/ initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.02,
    0.04,
    0.08,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
  ],
  "n": 6,
  "nt": 316,
  "s": 4,
  "st": 176,
  "uc": Array [
    2,
    0.8,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
  ],
}
`;
